--- a/backend/.env.local
+++ b/backend/.env.local
@@ -1,5 +1,9 @@
 SECRET_KEY=supersecreto123
 JWT_SECRET_KEY=jwtclaveultrasecreta
-DATABASE_URL=sqlite:///db.sqlite3
+
+# Base de datos
+DATABASE_URL=sqlite:///instance/app.db
+
+# Entorno
 FLASK_ENV=development
 FLASK_DEBUG=True
